--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,36 +1,109 @@
 buildscript {
     repositories {
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.12.2'
+        classpath 'com.android.tools.build:gradle:0.12.+'
+        classpath 'org.robolectric:robolectric-gradle-plugin:0.11.+'
     }
 }
-apply plugin: 'com.android.application'
+apply plugin: 'android'
+apply plugin: 'robolectric'
 
 repositories {
-        jcenter()
+    mavenCentral()
 }
 
-android {
-    compileSdkVersion 'android-L'
+def extension = android {
+    compileSdkVersion 19
     buildToolsVersion "20.0.0"
-
+    packagingOptions {
+        exclude 'LICENSE.txt'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE'
+    }
     defaultConfig {
-        applicationId "de.ibs.app"
         minSdkVersion 17
         targetSdkVersion 19
         versionCode 1
         versionName "1.0"
+        testInstrumentationRunner "com.google.android.apps.common.testing.testrunner.GoogleInstrumentationTestRunner"
     }
     buildTypes {
         release {
             runProguard false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+        }
+    }
+    sourceSets {
+        androidTest {
+            setRoot('src/test')
         }
     }
 }
-
+extension
+robolectric {
+    include '**/*Test.class'
+    exclude '**/espresso/**/*.class'
+}
 dependencies {
+    repositories {
+        mavenCentral()
+    }
+
+    android {
+        dexOptions {
+            incremental false
+            preDexLibraries = false
+            jumboMode = true
+        }
+    }
+
+    androidTestCompile 'com.google.guava:guava:14.0.1'
+    androidTestCompile 'com.squareup.dagger:dagger:1.1.0'
+
+
+    androidTestCompile 'org.hamcrest:hamcrest-core:1.1'
+    androidTestCompile 'org.hamcrest:hamcrest-library:1.1'
+    androidTestCompile 'org.hamcrest:hamcrest-integration:1.1'
+
+    androidTestCompile files('libs/espresso-1.1.jar', 'libs/testrunner-1.1.jar',
+            'libs/testrunner-runtime-1.1.jar',)
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
+
+    androidTestCompile('junit:junit:4.11'){
+        exclude module: 'hamcrest-core'
+    }
+    androidTestCompile('org.robolectric:robolectric:2.3') {
+        exclude module: 'classworlds'
+        exclude module: 'commons-logging'
+        exclude module: 'httpclient'
+        exclude module: 'maven-artifact'
+        exclude module: 'maven-artifact-manager'
+        exclude module: 'maven-error-diagnostics'
+        exclude module: 'maven-model'
+        exclude module: 'maven-project'
+        exclude module: 'maven-settings'
+        exclude module: 'plexus-container-default'
+        exclude module: 'plexus-interpolation'
+        exclude module: 'plexus-utils'
+        exclude module: 'wagon-file'
+        exclude module: 'wagon-http-lightweight'
+        exclude module: 'wagon-provider-api'
+    }
+
+
+    androidTestCompile 'com.squareup:fest-android:1.0.+'
+    compile 'com.android.support:appcompat-v7:19.+'
+    // You must install or update the Support Repository through the SDK manager to use this dependency.
+    compile 'com.android.support:support-v4:19.1.0'
+}
+apply plugin: 'idea'
+
+idea {
+    module {
+        testOutputDir = file('build/test-classes/debug')
+    }
 }
