--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.ibs.app" >
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -28,6 +28,12 @@
             android:name=".speaker.SpeakerAcitvity"
             android:label="@string/title_activity_speaker_acitvity" >
         </activity>
+
+        <service
+                android:name=".speaker.restmethod.SpeakerRequest"
+                android:enabled="true"
+                android:exported="false">
+        </service>
     </application>
 
 </manifest>
