--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.ibs.app" >
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-sdk
+            android:minSdkVersion="16"
+            android:targetSdkVersion="18"/>
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
