--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
             android:targetSdkVersion="18"/>
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/iconibs"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
