--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".room.RoomActivity"
-            android:label="@string/title_activity_room" >
+            android:label="@string/title_activity_room"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,7 +30,8 @@
 
         <activity
             android:name=".speaker.SpeakerAcitvity"
-            android:label="@string/title_activity_speaker_acitvity" >
+            android:label="@string/title_activity_speaker_acitvity"
+            android:screenOrientation="portrait">
         </activity>
 
         <service
