--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.ibs.app" >
+
     <uses-permission android:name="android.permission.INTERNET" />
+
     <uses-sdk
-            android:minSdkVersion="16"
-            android:targetSdkVersion="18"/>
+        android:minSdkVersion="16"
+        android:targetSdkVersion="18" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/iconibs"
@@ -13,7 +16,7 @@
         <activity
             android:name=".room.RoomActivity"
             android:label="@string/title_activity_room"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -31,14 +34,19 @@
         <activity
             android:name=".speaker.SpeakerAcitvity"
             android:label="@string/title_activity_speaker_acitvity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
         </activity>
 
         <service
-                android:name=".speaker.restmethod.SpeakerRequest"
-                android:enabled="true"
-                android:exported="false">
+            android:name=".speaker.restmethod.SpeakerRequest"
+            android:enabled="true"
+            android:exported="false" >
         </service>
+
+        <activity
+            android:name=".speaker.SetUpSpeaker"
+            android:label="@string/title_activity_set_up_speaker" >
+        </activity>
     </application>
 
 </manifest>
