--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".room.RoomActivity"
+            android:name=".room.StartActivity"
             android:label="@string/title_activity_room"
             android:screenOrientation="portrait" >
             <intent-filter>
