--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:allowBackup="true"
         android:icon="@drawable/iconibs"
         android:label="@string/app_name"
+        android:name=".utils.Application"
         android:theme="@style/AppTheme" >
         <activity
             android:name=".overview.StartActivity"
